netflix-clone/nfc_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-clone-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-clone
  template:
    metadata:
      labels:
        app: netflix-clone
    spec:
      containers:
      - name: nfc-container
        image: bilaln/netflix_clone_img:v1
        ports:
        -  containerPort: 80
