netflix-clone/nfc_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfc-svc
spec:
  selector:
    app: netflix-clone
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
