netflix-clone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: netflix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nfc-svc
                port:
                  number: 80
